minor css update to stop stretching images on mobile

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -716,8 +716,8 @@ footer a:hover {
         position: absolute;
         z-index: -300;
         max-height: fit-content;
-        min-height: 100%;
-        width: 100%;
+        height: 100%;
+        min-width: 100%;
         left: 0;
         top: 0;
         bottom: 0;
